z-index fix for modals

--- a/MitraDazzle.less
+++ b/MitraDazzle.less
@@ -1031,7 +1031,7 @@ button .buttonbar-img {
 }
 
 .yui-panel-container {
-  z-index: 101 !important;
+  z-index: 102 !important;
 }
 
 .mask {
